--- a/ratings.html
+++ b/ratings.html
@@ -6,7 +6,8 @@
   <title>Ratings & Comments – GloWerkz Garage</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Orbitron:wght@400;700&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-  <script src="/public/js/script.js"></script>
+<script src="./js/script.js"></script>
+
 
 </head>
 <body class="bg-grid scanlines">
