--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="cards">
         <article class="card">
           <div class="media">
-            <img src="/public/assets/mercedes.jpg" alt="Mercedes Kit" class="product-image" />
+            <img src="mercedes.jpg" alt="Mercedes Kit" class="product-image" />
           </div>
           <h3 class="font-bebas">Mercedes Kit</h3>
           <p class="price">$600 kit • $1250 supplied & installed</p>
@@ -55,7 +55,7 @@
 
         <article class="card">
           <div class="media">
-            <img src="/public/assets/universal.jpg" alt="Universal Kit" class="product-image" />
+            <img src="universal.jpg" alt="Universal Kit" class="product-image" />
           </div>
           <h3 class="font-bebas">Universal Kit</h3>
           <p class="price">$150 kit • $400 supplied & installed</p>
@@ -66,7 +66,7 @@
 
         <article class="card">
           <div class="media">
-            <img src="/public/assets/starlights.jpg" alt="Starlights Kit" class="product-image" />
+            <img src="starlights.jpg" alt="Starlights Kit" class="product-image" />
           </div>
           <h3 class="font-bebas">Starlights Kit</h3>
           <p class="price">$200 kit • $850 supplied & installed</p>
@@ -110,7 +110,7 @@
 
         <article class="card">
           <div class="media">
-            <img src="/public/assets/range rover vogue .jpg" alt="Range Rover Vogue" class="product-image" />
+            <img src="range rover vogue .jpg" alt="Range Rover Vogue" class="product-image" />
           </div>
           <h3 class="font-bebas">Range Rover Vogue</h3>
           <p class="price">$650 supplied & installed</p>
@@ -133,12 +133,12 @@
       <h2 class="section-title font-bebas">From The Community</h2>
       <p class="sub">Tag <strong>@glowerkz_garage</strong> to be featured!</p>
       <div class="ig-grid">
-        <div class="ig-item"><img src="/public/assets/ig_1.jpg" alt="Community Post 1" class="ig-img" /></div>
-        <div class="ig-item"><img src="/public/assets/ig_2.jpg" alt="Community Post 2" class="ig-img" /></div>
-        <div class="ig-item"><img src="/public/assets/ig_3.jpg" alt="Community Post 3" class="ig-img" /></div>
-        <div class="ig-item"><img src="/public/assets/ig_4.jpg" alt="Community Post 4" class="ig-img" /></div>
-        <div class="ig-item"><img src="/public/assets/ig_5.jpg" alt="Community Post 5" class="ig-img" /></div>
-        <div class="ig-item"><img src="/public/assets/ig_6.jpg" alt="Community Post 6" class="ig-img" /></div>
+        <div class="ig-item"><img src="ig_1.jpg" alt="Community Post 1" class="ig-img" /></div>
+        <div class="ig-item"><img src="ig_2.jpg" alt="Community Post 2" class="ig-img" /></div>
+        <div class="ig-item"><img src="ig_3.jpg" alt="Community Post 3" class="ig-img" /></div>
+        <div class="ig-item"><img src="ig_4.jpg" alt="Community Post 4" class="ig-img" /></div>
+        <div class="ig-item"><img src="ig_5.jpg" alt="Community Post 5" class="ig-img" /></div>
+        <div class="ig-item"><img src="ig_6.jpg" alt="Community Post 6" class="ig-img" /></div>
       </div>
     </section>
     
