--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <section class="hero bg-aurora">
-    <video class="hero-video" autoplay muted loop playsinline poster="assets/placeholder-hero.jpg">
+    <video class="hero-video" autoplay muted loop playsinline poster="placeholder-hero.jpg">
     </video>
     <div class="hero-inner">
       <h1 class="font-orbitron neon-title">Many Kits. Endless Style.</h1>
@@ -48,8 +48,9 @@
           </div>
           <h3 class="font-bebas">Mercedes Kit</h3>
           <p class="price">$600 kit • $1250 supplied & installed</p>
-          <button class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">Book & Pay</button>
-
+          <a href="book.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
+           Book
+          </a>
         </article>
         
 
