--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a href="booking.html">Book</a>
       <a href="enquiries.html">Enquiries</a>
       <a href="https://instagram.com/glowerkz_garage" target="_blank">@glowerkz_garage</a>
+      <a href="ratings.html">Ratings</a>
     </nav>    
   </header>
 
