--- a/ratings.html
+++ b/ratings.html
@@ -26,6 +26,16 @@
   </header>
 
   <main>
+   <section class="container section">
+  <h2 class="section-title">Upload Your Image</h2>
+  <div class="upload-card card neon-card">
+    <input type="file" id="imageUpload" accept="image/*" />
+    <div id="previewContainer">
+      <p>No image selected.</p>
+    </div>
+  </div>
+</section>
+
     <section class="container section">
       <h1 class="section-title">Ratings & Comments</h1>
 
