--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             <img src="mercedes.jpg" alt="Mercedes Kit" class="product-image" />
           </div>
           <h3 class="font-bebas">Mercedes Kit</h3>
-          <p class="price">$600 kit • $1250 supplied & installed</p>
+          <p class="price">🔹 Mercedes Ambient Lighting Kit
+Specifically designed for all new-generation Mercedes models, this kit integrates seamlessly with your interior for a factory-finish look. Bring your Benz to life with premium multi-zone ambient lighting that feels straight out of the showroom.
+</p>
           <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
            Book
           </a>
@@ -80,53 +82,6 @@
 
         </article>
         
-
-        <article class="card">
-          <div class="media placeholder">Image / Video</div>
-          <h3 class="font-bebas">BMW F30</h3>
-          <p class="price">$500 supplied & installed</p>
-          <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
-           Book
-          </a>
-        </article>
-
-        <article class="card">
-          <div class="media placeholder">Image / Video</div>
-          <h3 class="font-bebas">BMW F20</h3>
-          <p class="price">$400 supplied & installed</p>
-          <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
-           Book
-          </a>
-        </article>
-
-        <article class="card">
-          <div class="media placeholder">Image / Video</div>
-          <h3 class="font-bebas">Audi A3</h3>
-          <p class="price">$450 supplied & installed</p>
-          <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
-           Book
-          </a>
-        </article>
-
-        <article class="card">
-          <div class="media placeholder">Image / Video</div>
-          <h3 class="font-bebas">Range Rover Velar</h3>
-          <p class="price">$600 supplied & installed</p>
-          <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
-           Book
-          </a>
-        </article>
-
-        <article class="card">
-          <div class="media">
-            <img src="range rover vogue .jpg" alt="Range Rover Vogue" class="product-image" />
-          </div>
-          <h3 class="font-bebas">Range Rover Vogue</h3>
-          <p class="price">$650 supplied & installed</p>
-          <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
-           Book
-          </a>
-        </article>
         
       </div>
     </section>
