--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@ Specifically designed for all new-generation Mercedes models, this kit integrate
             <img src="universal.jpg" alt="Universal Kit" class="product-image" />
           </div>
           <h3 class="font-bebas">Universal Kit</h3>
-          <p class="price">$150 kit • $400 supplied & installed</p>
+          <p class="price">🔹 Universal Ambient Lighting Kit
+A complete lighting upgrade for any car make or model. Includes 6 lighting strips and 4 footwell lights, with optional speaker lights for an immersive glow. Fully customizable to match your style and create the perfect vibe inside your ride.
+</p>
           <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
            Book
           </a>
@@ -75,7 +77,8 @@ Specifically designed for all new-generation Mercedes models, this kit integrate
             <img src="starlights.jpg" alt="Starlights Kit" class="product-image" />
           </div>
           <h3 class="font-bebas">Starlights Kit</h3>
-          <p class="price">$200 kit • $850 supplied & installed</p>
+          <p class="price">🔹 Starlight Headliner
+Transform your roof into a night sky with our custom starlight installation. Choose your color, pattern, and intensity to create the iconic “Rolls Royce” effect in any car. A true statement upgrade that makes your interior unforgettable.</p>
           <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
            Book
           </a>
