--- a/booking.html
+++ b/booking.html
@@ -19,7 +19,7 @@
 
   <main class="section">
     <h1 class="section-title font-bebas">Book Your Install</h1>
-    <p class="sub">A deposit is required to finalize the booking. We’ll confirm exact schedule after payment.</p>
+    <p class="sub">We’ll confirm exact schedule after payment.</p>
 
     <form id="bookingForm" class="form neon-form" action="https://formspree.io/f/mjkozpqq" method="POST">
       <div class="grid-2">
@@ -44,11 +44,6 @@
             <option>Mercedes Kit</option>
             <option>Universal Kit</option>
             <option>Starlights Kit</option>
-            <option>BMW F30</option>
-            <option>BMW F20</option>
-            <option>Audi A3</option>
-            <option>Range Rover Velar</option>
-            <option>Range Rover Vogue</option>
           </select>
         </label>
       </div>
