--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="mercedes.jpg" alt="Mercedes Kit" class="product-image" />
           </div>
           <h3 class="font-bebas">Mercedes Kit</h3>
-          <p class="price">🔹 Mercedes Ambient Lighting Kit
+          <p class="price"> Mercedes Ambient Lighting Kit
 Specifically designed for all new-generation Mercedes models, this kit integrates seamlessly with your interior for a factory-finish look. Bring your Benz to life with premium multi-zone ambient lighting that feels straight out of the showroom.
 </p>
           <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
@@ -62,7 +62,7 @@ Specifically designed for all new-generation Mercedes models, this kit integrate
             <img src="universal.jpg" alt="Universal Kit" class="product-image" />
           </div>
           <h3 class="font-bebas">Universal Kit</h3>
-          <p class="price">🔹 Universal Ambient Lighting Kit
+          <p class="price"> Universal Ambient Lighting Kit
 A complete lighting upgrade for any car make or model. Includes 6 lighting strips and 4 footwell lights, with optional speaker lights for an immersive glow. Fully customizable to match your style and create the perfect vibe inside your ride.
 </p>
           <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
@@ -77,7 +77,7 @@ A complete lighting upgrade for any car make or model. Includes 6 lighting strip
             <img src="starlights.jpg" alt="Starlights Kit" class="product-image" />
           </div>
           <h3 class="font-bebas">Starlights Kit</h3>
-          <p class="price">🔹 Starlight Headliner
+          <p class="price"> Starlight Headliner
 Transform your roof into a night sky with our custom starlight installation. Choose your color, pattern, and intensity to create the iconic “Rolls Royce” effect in any car. A true statement upgrade that makes your interior unforgettable.</p>
           <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
            Book
