--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ Transform your roof into a night sky with our custom starlight installation. Cho
     <small>© <span id="year"></span> GloWerkz Garage • Sydney (Mobile Service)</small>
   </footer>
 
-  <script src="js/config.js"></script>
-  <script src="js/reactor.js"></script>
-  <script src="js/main.js"></script>
+  <script src="config.js"></script>
+  <script src="reactor.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
 
