--- a/booking.html
+++ b/booking.html
@@ -69,7 +69,7 @@
 
   <footer class="site-footer"><small>© <span id="year"></span> GloWerkz Garage</small></footer>
 
-  <script src="js/config.js"></script>
-  <script src="js/main.js"></script>
+  <script src="config.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
