--- a/booking.html
+++ b/booking.html
@@ -38,6 +38,9 @@
         <label>Preferred Date
           <input type="date" name="date" required />
         </label>
+        <label>model of vehicle
+          <input type="text" name="model" placeholder="What is the make and model of your vehicle?" required />
+        </label>
         <label>Kit Type
           <select name="kit" required>
             <option value="">Select a kit…</option>
