--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <p class="price"> Mercedes Ambient Lighting Kit
 Specifically designed for all new-generation Mercedes models, this kit integrates seamlessly with your interior for a factory-finish look. Bring your Benz to life with premium multi-zone ambient lighting that feels straight out of the showroom.
 </p>
-          <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
+          <a href="booking.html">
            Book
           </a>
         </article>
