--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <p class="price"> Mercedes Ambient Lighting Kit
 Specifically designed for all new-generation Mercedes models, this kit integrates seamlessly with your interior for a factory-finish look. Bring your Benz to life with premium multi-zone ambient lighting that feels straight out of the showroom.
 </p>
-          <a href="booking.html">
+          <a href="booking.html" class="btn btn-ghost white-glow checkout">
            Book
           </a>
         </article>
@@ -66,7 +66,7 @@ Specifically designed for all new-generation Mercedes models, this kit integrate
           <p class="price"> Universal Ambient Lighting Kit
 A complete lighting upgrade for any car make or model. Includes 6 lighting strips and 4 footwell lights, with optional speaker lights for an immersive glow. Fully customizable to match your style and create the perfect vibe inside your ride.
 </p>
-          <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
+          <a href="booking.html" class="btn btn-ghost white-glow checkout">
            Book
           </a>
 
@@ -80,7 +80,7 @@ A complete lighting upgrade for any car make or model. Includes 6 lighting strip
           <h3 class="font-bebas">Starlights Kit</h3>
           <p class="price"> Starlight Headliner
 Transform your roof into a night sky with our custom starlight installation. Choose your color, pattern, and intensity to create the iconic “Rolls Royce” effect in any car. A true statement upgrade that makes your interior unforgettable.</p>
-          <a href="booking.html" class="btn btn-ghost white-glow checkout" data-price="price_MERCEDES_INSTALL_REPLACE">
+          <a href="booking.html" class="btn btn-ghost white-glow checkout">
            Book
           </a>
 
